--- a/admin/dashboardAdmin.html
+++ b/admin/dashboardAdmin.html
@@ -34,8 +34,8 @@
 
     <header class="main-header">
         <a href="dashboardAdmin.html" class="logo">
-            <span class="logo-mini"><b>A</b>LT</span>
-            <span class="logo-lg">Admin<b>LTE</b></span>
+            <span class="logo-mini"><b>S</b>TB</span>
+            <span class="logo-lg">SI<b>TATIB</b></span>
         </a>
         <nav class="navbar navbar-static-top">
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
@@ -75,10 +75,10 @@
         <section class="content">
             <div class="box">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Title</h3>
+                    <h3 class="box-title">Welcome ...</h3>
                 </div>
                 <div class="box-body">
-                    Start creating your amazing application!
+                    <h1>Selamat Datang nama Admin</h1>
                 </div>
                 <div class="box-footer">
                     Footer
