crud mahasiswa done

--- a/admin/dashboardAdmin.html
+++ b/admin/dashboardAdmin.html
@@ -62,6 +62,7 @@
                 <li class="header">MAIN NAVIGATION</li>
                 <li class="active"><a href="dashboardAdmin.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
                 <li class="active"><a href="dataMahasiswa.html"><i class="fa fa-users"></i> <span>Data Mahasiswa</span></a></li>
+                <li class="active"><a href="dataDosen.html"><i class="fa fa-users"></i> <span>Data Dosen</span></a></li>
                 <li><a href="#"><i class="fa fa-share"></i> <span>Multilevel</span></a></li>
             </ul>
         </section>
