--- a/lupaPassword.html
+++ b/lupaPassword.html
@@ -11,9 +11,10 @@
     <div class="forgot-password-container">
         <div class="form-container">
             <h2>Lupa Password</h2>
-            <form>
-                <p>Masukkan alamat email Anda untuk mengatur ulang password:</p>
-                <input type="email" placeholder="Email" required>
+            <form action="prosesPemulihan.php" method="POST">
+                <p>Masukkan NIM dan alamat email Anda untuk mengatur ulang password:</p>
+                <input type="text" name="nim" placeholder="NIM" required>
+                <input type="email" name="email" placeholder="Email Pemulihan" required>
                 <button type="submit">Kirim</button>
                 <a href="loginPage.html">Kembali ke Login</a>
             </form>
