--- a/admin/dataMahasiswa.html
+++ b/admin/dataMahasiswa.html
@@ -63,10 +63,17 @@
         <section class="content">
             <div class="box">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Data Mahasiswa</h3>
+                    <h3 class="box-title">Daftar Mahasiswa</h3>
                 </div>
                 <div class="box-body">
-                    <button class="btn btn-primary" data-toggle="modal" data-target="#addStudentModal">Tambah Mahasiswa</button>
+                    <div class="row">
+                        <div class="col-md-10">
+                            <input type="text" id="searchStudent" class="form-control" placeholder="Search">
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#addStudentModal">Tambah Mahasiswa</button>
+                        </div>
+                    </div>
                     <table class="table table-bordered" id="studentTable">
                         <thead>
                             <tr>
@@ -252,6 +259,14 @@
                 }
             });
         }
+
+                // Search functionality
+            $('#searchStudent').on('keyup', function () {
+                var value = $(this).val().toLowerCase(); // Ambil input search dan ubah jadi lowercase
+                $('#studentTable tbody tr').filter(function () {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1); // Filter rows berdasarkan query
+                });
+            });
 
         // Fungsi untuk mengambil data Prodi dan mengisi dropdown Prodi
         function fetchProdi() {
