login session admin

--- a/admin/dataMahasiswa.html
+++ b/admin/dataMahasiswa.html
@@ -20,7 +20,7 @@
 <div class="wrapper">
 
     <header class="main-header">
-        <a href="dashboardAdmin.html" class="logo">
+        <a href="dashboardAdmin.php" class="logo">
             <span class="logo-mini"><b>S</b>TB</span>
             <span class="logo-lg">SI<b>TATIB</b></span>
         </a>
@@ -47,10 +47,10 @@
             </div>
             <ul class="sidebar-menu">
                 <li class="header">MAIN NAVIGATION</li>
-                <li class="active"><a href="dashboardAdmin.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
+                <li class="active"><a href="dashboardAdmin.php"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
                 <li class="active"><a href="dataMahasiswa.html"><i class="fa fa-users"></i> <span>Data Mahasiswa</span></a></li>
                 <li class="active"><a href="dataDosen.html"><i class="fa fa-users"></i> <span>Data Dosen</span></a></li>
-                <li><a href="#"><i class="fa fa-share"></i> <span>Multilevel</span></a></li>
+                <li class="active"><a href="dataLaporan.html"><i class="fa fa-file-text-o"></i> <span>Data Laporan Pelanggaran</span></a></li>
             </ul>
         </section>
     </aside>
