--- a/admin/dataDosen.html
+++ b/admin/dataDosen.html
@@ -33,7 +33,7 @@
 <div class="wrapper">
 
     <header class="main-header">
-        <a href="dashboardAdmin.html" class="logo">
+        <a href="dashboardAdmin.php" class="logo">
             <span class="logo-mini"><b>S</b>TB</span>
             <span class="logo-lg">SI<b>TATIB</b></span>
         </a>
@@ -60,10 +60,10 @@
             </div>
             <ul class="sidebar-menu">
                 <li class="header">MAIN NAVIGATION</li>
-                <li><a href="dashboardAdmin.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
-                <li><a href="dataMahasiswa.html"><i class="fa fa-users"></i> <span>Data Mahasiswa</span></a></li>
+                <li class="active"><a href="dashboardAdmin.php"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
+                <li class="active"><a href="dataMahasiswa.html"><i class="fa fa-users"></i> <span>Data Mahasiswa</span></a></li>
                 <li class="active"><a href="dataDosen.html"><i class="fa fa-users"></i> <span>Data Dosen</span></a></li>
-                <li><a href="#"><i class="fa fa-share"></i> <span>Multilevel</span></a></li>
+                <li class="active"><a href="dataLaporan.html"><i class="fa fa-file-text-o"></i> <span>Data Laporan Pelanggaran</span></a></li>
             </ul>
         </section>
     </aside>
@@ -172,6 +172,55 @@
         </div>
     </div>
 </div>
+<!-- Modal Edit Dosen -->
+<div id="editDosenModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Edit Dosen</h4>
+            </div>
+            <div class="modal-body">
+                <form id="editDosenForm">
+                    <input type="hidden" id="edit_nip" name="nip">
+                    <div class="form-group">
+                        <label for="edit_nama">Nama</label>
+                        <input type="text" class="form-control" id="edit_nama" name="nama" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit_ttl">Tempat, Tanggal Lahir</label>
+                        <input type="text" class="form-control" id="edit_ttl" name="ttl" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit_jenis_kelamin">Jenis Kelamin</label>
+                        <select class="form-control" id="edit_jenis_kelamin" name="jenis_kelamin" required>
+                            <option value="L">Laki-laki</option>
+                            <option value="P">Perempuan</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit_jabatan">Jabatan</label>
+                        <input type="text" class="form-control" id="edit_jabatan" name="jabatan" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit_email">Email</label>
+                        <input type="email" class="form-control" id="edit_email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit_no_phone">No. Telepon</label>
+                        <input type="text" class="form-control" id="edit_no_phone" name="no_phone" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit_alamat">Alamat</label>
+                        <textarea class="form-control" id="edit_alamat" name="alamat" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Simpan Perubahan</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- jQuery 2.2.3 -->
 <script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
@@ -254,6 +303,51 @@
                 error: function (xhr, status, error) {
                     console.error(xhr.responseText);
                     alert("Terjadi kesalahan saat menyimpan data dosen.");
+                }
+            });
+        });
+            // Fungsi untuk membuka modal editDosen dengan data yang sudah ada
+            $(document).on('click', '.editDosen', function () {
+            const nip = $(this).data('nip'); // Ambil NIP dari tombol edit
+            $.ajax({
+                url: 'getdosennip.php', // Endpoint untuk mengambil data dosen berdasarkan NIP
+                method: 'GET',
+                data: { nip: nip },
+                success: function (data) {
+                    const dosen = JSON.parse(data); // Parse data menjadi JSON
+                    $('#edit_nip').val(dosen.nip);
+                    $('#edit_nama').val(dosen.nama);
+                    $('#edit_ttl').val(dosen.TTL);
+                    $('#edit_jenis_kelamin').val(dosen.jenis_kelamin);
+                    $('#edit_jabatan').val(dosen.jabatan);
+                    $('#edit_email').val(dosen.email);
+                    $('#edit_no_phone').val(dosen.no_phone);
+                    $('#edit_alamat').val(dosen.alamat);
+                    $('#editDosenModal').modal('show'); // Tampilkan modal
+                },
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                    alert("Terjadi kesalahan saat mengambil data dosen.");
+                }
+            });
+        });
+
+        // Fungsi untuk menyimpan perubahan data dosen
+        $('#editDosenForm').on('submit', function (e) {
+            e.preventDefault(); // Mencegah reload halaman
+
+            $.ajax({
+                url: 'updateDosen.php', // Endpoint PHP untuk memperbarui data dosen
+                method: 'POST',
+                data: $(this).serialize(),
+                success: function (response) {
+                    alert(response); // Tampilkan pesan sukses
+                    $('#editDosenModal').modal('hide'); // Tutup modal
+                    fetchDosen(); // Segarkan data dosen setelah update
+                },
+                error: function (xhr, status, error) {
+                    console.error(xhr.responseText);
+                    alert("Terjadi kesalahan saat menyimpan perubahan data dosen.");
                 }
             });
         });
