--- a/dosen/dashboardDosen.html
+++ b/dosen/dashboardDosen.html
@@ -5,23 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Dosen</title>
-    <!-- Link ke Bootstrap dan FontAwesome untuk style -->
+    <!-- Link ke Bootstrap dan AdminLTE -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- AdminLTE theme -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.18/css/AdminLTE.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.18/css/skins/_all-skins.min.css">
     <style>
         .main-header .navbar {
-            background-color: #115599 !important; /* Mengganti warna navbar */
+            background-color: #115599 !important;
         }
     </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
-<!-- Site wrapper -->
 <div class="wrapper">
 
-    <!-- Main Header -->
+    <!-- Header -->
     <header class="main-header">
         <a href="dashboardDosen.html" class="logo">
             <span class="logo-mini"><b>D</b>DS</span>
@@ -37,48 +35,41 @@
         </nav>
     </header>
 
-    <!-- Left Sidebar -->
+    <!-- Sidebar -->
     <aside class="main-sidebar">
         <section class="sidebar">
-            <!-- User Info Panel -->
             <div class="user-panel">
                 <div class="pull-left image">
                     <img src="https://via.placeholder.com/160" class="img-circle" alt="User Image">
                 </div>
                 <div class="pull-left info">
-                    <p>Dosen</p>
+                    <p>Dosen Teknik Informatika</p>
                     <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                 </div>
             </div>
-
-            <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
                 <li class="header">MAIN NAVIGATION</li>
-                <li><a href="dashboardDosen.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
-                <li><a href="tugasDosen.html"><i class="fa fa-file-text"></i> <span>Informasi Tugas</span></a></li>
+                <li class="active"><a href="dashboardDosen.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
                 <li><a href="dpaDosen.html"><i class="fa fa-users"></i> <span>Daftar DPA</span></a></li>
-                <li><a href="settingsDosen.html"><i class="fa fa-gears"></i> <span>Settings</span></a></li>
+
             </ul>
         </section>
     </aside>
 
     <!-- Content Wrapper -->
     <div class="content-wrapper">
-        <!-- Content Header (Page Header) -->
         <section class="content-header">
-            <h1>Dashboard Dosen</h1>
-            <small>Control panel</small>
+            <h1>Dashboard<small>Control Panel</small></h1>
         </section>
 
-        <!-- Main Content -->
         <section class="content">
-            <!-- Box for Main Info -->
+            <!-- Box -->
             <div class="box">
                 <div class="box-header with-border">
                     <h3 class="box-title">Welcome, Dosen</h3>
                 </div>
                 <div class="box-body">
-                    <h1>Selamat Datang, Dosen Teknik Informatika (nama)</h1>
+                    <h1>Selamat Datang, Dosen Teknik Informatika</h1>
                 </div>
                 <div class="box-footer">
                     Footer Info
@@ -87,7 +78,7 @@
         </section>
     </div>
 
-    <!-- Main Footer -->
+    <!-- Footer -->
     <footer class="main-footer">
         <div class="pull-right hidden-xs">
             <b><a href="#">Jurusan Teknologi Informasi</a></b>
@@ -96,19 +87,10 @@
     </footer>
 
 </div>
-<!-- ./wrapper -->
 
-<!-- jQuery 2.2.3 -->
+<!-- Script -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-<!-- Bootstrap 3.3.6 -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!-- SlimScroll -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-slimscroll/1.3.8/jquery.slimscroll.min.js"></script>
-<!-- FastClick -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
-<!-- AdminLTE App -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.18/js/app.min.js"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.18/js/demo.js"></script>
 </body>
 </html>
