--- a/dosen/dpaDosen.html
+++ b/dosen/dpaDosen.html
@@ -14,7 +14,16 @@
             background-color: #115599 !important;
         }
 
-        /* Custom Styles */
+        /* Menambahkan CSS untuk memperbesar judul */
+        .page-title {
+            font-size: 40px !important; /* Ukuran font lebih besar */
+            font-weight: bold;
+            color: #115599; /* Warna teks */
+            text-align: left; /* Rata tengah */
+            margin-bottom: 30px; /* Memberikan jarak bawah */
+        }
+
+        /* Custom Styles lainnya */
         .content-wrapper {
             padding: 30px;
         }
@@ -53,7 +62,6 @@
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
-
     <!-- Header -->
     <header class="main-header">
         <a href="dashboardDosen.html" class="logo">
@@ -86,19 +94,17 @@
                 <li class="header">MAIN NAVIGATION</li>
                 <li class="active"><a href="dashboardDosen.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
                 <li><a href="dpaDosen.html"><i class="fa fa-users"></i> <span>Daftar DPA</span></a></li>
-                <li><a href="settingsDosen.html"><i class="fa fa-gears"></i> <span>Settings</span></a></li>
             </ul>
         </section>
     </aside>
 
     <!-- Content Wrapper -->
     <div class="content-wrapper">
-
         <section class="content">
             <!-- Box -->
             <div class="box">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Daftar Kelas dan DPA</h3>
+                    <h1 class="page-title">Daftar Kelas dan DPA</h1>
                 </div>
                 <div class="box-body">
                     <div class="row">
@@ -151,7 +157,6 @@
         </div>
         <strong><a href="#">Politeknik Negeri Malang</a></strong>
     </footer>
-
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
