--- a/admin/dataLaporan.html
+++ b/admin/dataLaporan.html
@@ -167,6 +167,31 @@
         </div>
     </div>
 </div>
+<div id="editLaporanModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Edit Status Pengaduan</h4>
+            </div>
+            <div class="modal-body">
+                <form id="editLaporanForm">
+                    <input type="hidden" id="editPengaduanId">
+                    <div class="form-group">
+                        <label for="editStatusPengaduan">Status Pengaduan</label>
+                        <select class="form-control" id="editStatusPengaduan">
+                            <option value="valid">Valid</option>
+                            <option value="tidak valid">Tidak Valid</option>
+                            <option value="proses">Proses</option>
+                        </select>
+                    </div>
+                    <button type="button" class="btn btn-primary" id="saveEditLaporan">Simpan</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Batal</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- jQuery 2.2.3 -->
 <script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
@@ -253,6 +278,43 @@ $(document).on('click', '.detailBtn', function () {
         }
     });
 });
+$(document).on('click', '.editBtn', function () {
+    var laporanId = $(this).data('id');
+    var status = $(this).data('status');
+
+    $('#editPengaduanId').val(laporanId);
+    $('#editStatusPengaduan').val(status);
+    $('#editLaporanModal').modal('show');
+});
+
+$('#saveEditLaporan').on('click', function () {
+    var laporanId = $('#editPengaduanId').val();
+    var newStatus = $('#editStatusPengaduan').val();
+
+    $.ajax({
+        url: 'updateLaporan.php', // URL untuk update
+        method: 'POST',
+        dataType: 'json', // Pastikan menerima JSON
+        data: {
+            id: laporanId,
+            status: newStatus
+        },
+        success: function (response) {
+            if (response.success) {
+                alert(response.message); // Tampilkan pesan sukses
+                $('#editLaporanModal').modal('hide');
+                fetchLaporan(); // Refresh tabel
+            } else {
+                alert('Gagal: ' + response.message); // Tampilkan pesan error
+            }
+        },
+        error: function (xhr, status, error) {
+            console.error(xhr.responseText);
+            alert("Terjadi kesalahan saat mengupdate status pengaduan.");
+        }
+    });
+});
+
 
     });
 </script>
