disuruh vanil nge push

--- a/dosen/dashboardDosen.html
+++ b/dosen/dashboardDosen.html
@@ -51,7 +51,7 @@
                 <li class="header">MAIN NAVIGATION</li>
                 <li class="active"><a href="dashboardDosen.html"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
                 <li><a href="dpaDosen.html"><i class="fa fa-users"></i> <span>Daftar DPA</span></a></li>
-
+                <li><a href="../logout.php"><i class="fa fa-exit"></i><span>Log Out</span></a></li>
             </ul>
         </section>
     </aside>
