--- a/lupaPassword.html
+++ b/lupaPassword.html
@@ -11,13 +11,12 @@
     <div class="forgot-password-container">
         <div class="form-container">
             <h2>Lupa Password</h2>
+            <p>Untuk melakukan reset password, silakan masukkan alamat email anda.</p>
             <form action="prosesPemulihan.php" method="POST">
-                <p>Masukkan NIM dan alamat email Anda untuk mengatur ulang password:</p>
-                <input type="text" name="nim" placeholder="NIM" required>
-                <input type="email" name="email" placeholder="Email Pemulihan" required>
+                <input type="email" name="email" placeholder="Email" required>
                 <button type="submit">Kirim</button>
-                <a href="loginPage.html">Kembali ke Login</a>
             </form>
+            <a href="loginPage.html">Kembali ke Login</a>
         </div>
     </div>
 </body>
