proses lupa pwnya pas masukin email masi error bjir

--- a/lupaPassword.html
+++ b/lupaPassword.html
@@ -11,7 +11,7 @@
     <div class="forgot-password-container">
         <div class="form-container">
             <h2>Lupa Password</h2>
-            <p>Untuk melakukan reset password, silakan masukkan alamat email anda.</p>
+            <p>Untuk melakukan reset password, silakan masukkan email anda.</p>
             <form action="prosesPemulihan.php" method="POST">
                 <input type="email" name="email" placeholder="Email" required>
                 <button type="submit">Kirim</button>
