--- a/loginPage.html
+++ b/loginPage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Welcome to<br><span class="orange-text">SITATIB</span> POLINEMA</h2>
+        <h2>WELCOME TO<br><span class="orange-text">SITATIB</span> POLINEMA</h2>
         <form action="prosesLogin.php" method="POST">
             <img src="assets/LogoPolinema.png" alt="Polinema Logo" class="logo">
             <input type="text" name="username" placeholder="Username" required>
