profile dosen dan penyesuian tammpilan lainnya

--- a/loginPage.html
+++ b/loginPage.html
@@ -32,6 +32,8 @@
             </div>
             <button type="submit">Login</button>
             <a href="lupaPassword.html">Lupa password?</a>
+            <br><br>
+            <p>&copy; 2024 <strong>SITATIB.</strong> All rights reserved.</p>
         </form>
     </div>
     <script>
