--- a/lupaPassword.html
+++ b/lupaPassword.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lupa Password</title>
     <link rel="stylesheet" href="style.css">
@@ -17,21 +15,75 @@
             justify-content: center;
             align-items: center;
         }
+        .login-container {
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 500px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        h2 {
+            margin: 0;
+            margin-bottom: 10px;
+            font-family: Arial, sans-serif;
+            color: #115599;
+        }
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 14px;
+            box-sizing: border-box; /* Ensure padding doesn't affect width */
+        }
+        button {
+            width: 100%; /* Match the width of input fields */
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+            background-color: #115599;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            font-family: Arial, sans-serif;
+            box-sizing: border-box; /* Ensure padding doesn't affect width */
+        }
+        button:hover {
+            background-color: #0d4b87;
+        }
+        a {
+            text-decoration: none;
+            color: #115599;
+            font-size: 12px;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        p {
+            font-size: 12px;
+            color: #666;
+            margin-top: 10px;
+        }
     </style>
 </head>
-
 <body>
-    <div class="forgot-password-container">
-        <div class="form-container">
-            <h2>Lupa Password</h2>
-            <p>Untuk melakukan reset password, silakan masukkan email anda.</p>
-            <form action="prosesPemulihan.php" method="POST">
-                <input type="email" name="email" placeholder="Email" required>
-                <button type="submit">Kirim</button>
-            </form>
+    <div class="login-container">
+        <h2>Reset Password</h2>
+        <form action="resetPassword.php" method="POST" style="width: 100%;">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="current_password" placeholder="Password Saat Ini" required>
+            <input type="password" name="new_password" placeholder="Password Baru" required>
+            <button type="submit">Reset</button>
             <a href="loginPage.html">Kembali ke Login</a>
-        </div>
+            <p>&copy; 2024 <strong>SITATIB.</strong> All rights reserved.</p>
+        </form>
     </div>
 </body>
-
 </html>
